[package]
name = "unlock_excel"
version = "0.2.0"
edition = "2021"
authors = ["James MacAdie"]
description = "Small command line utility to inspect or remove the VBA protection status of Excel files"
license = "MIT"
homepage = "https://github.com/jmacadie/unlock_excel"
repository = "https://github.com/jmacadie/unlock_excel"
readme = "README.md"
keywords = ["Excel", "VBA", "password"]
categories = ["command-line-utilities"]

[dependencies]
cfb = "0.9.0"
clap = { version = "4.5.1", features = ["derive"] }
const-hex = "1.11.1"
nom = "7.1.3"
rand = "0.8.5"
sha1 = "0.10.6"
zip = "0.6.6"
